sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a vehicle is empty.
Error: Invalid arrivalLane definition for vehicle '1';
 must be one of ("current", or an int>=0)
Quitting (on error).
